[package]
name = "fyodor"
version = "0.1.0"
edition = "2021"
authors = ["urfault"]
description = "Double buffered terminal renderer for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
crossterm = "0.27"
unicode-width = "0.1.10"
